--- a/hex-schism/жетоны.html
+++ b/hex-schism/жетоны.html
@@ -28,10 +28,10 @@
 Взаимное уничтожение с жетоном <span style="color:rgb(0, 112, 192)">ослабления</span><br>
 Максимум стаков: 2<br>
 Все жетоны <span style="color:rgb(185, 173, 45)">усиления</span> исчезнут после 3 раундов после первого применённого<br>
-При инвертировании становится жетоном <span style="color:rgb(0, 112, 192)">ослабления</span></p></div></div></div><div class="heading-wrapper"><h4 data-heading="Не улучшаемые" dir="auto" class="heading" id="Не_улучшаемые"><div class="heading-collapse-indicator collapse-indicator collapse-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon right-triangle"><path d="M3 8L12 17L21 8"></path></svg></div>Не улучшаемые</h4><div class="heading-children"><div><p dir="auto"><strong><span style="font-weight:bold; color:rgb(185, 173, 45)">Контратака</span></strong><br>
-Ответит на следующую атаку в <a data-href="ближнем бою" href="ближнем бою" class="internal-link" target="_self" rel="noopener">ближнем бою</a>, если это возможно<br>
+При инвертировании становится жетоном <span style="color:rgb(0, 112, 192)">ослабления</span></p></div></div></div><div class="heading-wrapper"><h4 data-heading="Не улучшаемые" dir="auto" class="heading" id="Не_улучшаемые"><div class="heading-collapse-indicator collapse-indicator collapse-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon right-triangle"><path d="M3 8L12 17L21 8"></path></svg></div>Не улучшаемые</h4><div class="heading-children"><div><p dir="auto"><strong><span style="font-weight:bold; color:rgb(185, 173, 45)">Атака по возможности</span></strong><br>
+Ответит на следующую атаку в <a data-href="ближнем бою" href="ближнем бою" class="internal-link" target="_self" rel="noopener">ближнем бою</a>, если это возможно, либо ударит вражеского юнита, передвигающегося в зоне контроля.<br>
 Максимум стаков: 3<br>
-Все жетоны <span style="color:rgb(185, 173, 45)">контратаки</span> исчезнут после 3 раундов после первого применённого<br>
+Все жетоны <span style="color:rgb(185, 173, 45)">атаки по возможности</span> исчезнут после 3 раундов после первого применённого<br>
 Не инвертируется</p></div><div><p dir="auto"><strong><span style="font-weight:bold; color:rgb(185, 173, 45)">Мастерство</span></strong><br>
 Следующая атакующая или лечащая способность будет максимально эффективна и применит дополнительный эффект (если такой предусмотрен)<br>
 Взаимное уничтожение с жетоном <span style="color:rgb(0, 112, 192)">немощности</span><br>
@@ -53,6 +53,10 @@
 Срабатывает лишь после неудачной проверки на сопротивление эффекту<br>
 Максимум стаков: 3<br>
 Все жетоны <span style="color:rgb(185, 173, 45)">оберега</span> исчезнут после 3 раундов после первого применённого<br>
+Не инвертируется</p></div><div><p dir="auto"><strong><span style="font-weight:bold; color:rgb(185, 173, 45)">Возмездие</span></strong><br>
+При получении атаки в ближнем или дальнем бою наносит N урона в радиусе 1 гекса<br>
+Максимум стаков: 3<br>
+Все жетоны <span style="color:rgb(185, 173, 45)">возмездия</span> исчезнут после 3 раундов после первого применённого<br>
 Не инвертируется</p></div></div></div></div></div><div class="heading-wrapper"><h3 data-heading="Негативные" dir="auto" class="heading" id="Негативные"><div class="heading-collapse-indicator collapse-indicator collapse-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon right-triangle"><path d="M3 8L12 17L21 8"></path></svg></div>Негативные</h3><div class="heading-children"><div class="heading-wrapper"><h4 data-heading="Улучшаемые" dir="auto" class="heading" id="Улучшаемые"><div class="heading-collapse-indicator collapse-indicator collapse-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon right-triangle"><path d="M3 8L12 17L21 8"></path></svg></div>Улучшаемые</h4><div class="heading-children"><div><p dir="auto"><strong><span style="font-weight:bold; color:rgb(0, 112, 192)">Ослабление</span></strong><br>
 Следующая атака нанесёт на 25/50% меньше урона<br>
 Взаимное уничтожение с жетоном <span style="color:rgb(185, 173, 45)">усиления </span><br>
@@ -95,7 +99,7 @@
 Один жетон <span style="color:rgb(112, 48, 160)">невидимости</span> исчезает за 1 действие<br>
 При инвертировании становится жетоном <span style="color:rgb(112, 48, 160)">провокации</span></p></div><div><p dir="auto"><strong><span style="font-weight:bold; color:rgb(112, 48, 160)">Надзор</span></strong><br>
 Автоматически атакует следующего врага, если тот появится в зоне контроля<br>
-Максимум стаков: 2<br>
+Максимум стаков: 1<br>
 Все жетоны <span style="color:rgb(112, 48, 160)">надзора</span> исчезнут после 3 раундов после применения первого<br>
 Не инвертируется</p></div><div class="mod-footer"></div></div></div></div></div></div></div></div><div class="sidebar-right sidebar"><div class="sidebar-handle"></div><div class="sidebar-topbar"><div class="topbar-content"></div><div class="clickable-icon sidebar-collapse-icon"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="svg-icon"><path d="M21 3H3C1.89543 3 1 3.89543 1 5V19C1 20.1046 1.89543 21 3 21H21C22.1046 21 23 20.1046 23 19V5C23 3.89543 22.1046 3 21 3Z"></path><path d="M10 4V20"></path><path d="M4 7H7"></path><path d="M4 10H7"></path><path d="M4 13H7"></path></svg></div></div><div class="sidebar-content"><div class="graph-view-wrapper"><div class="sidebar-section-header">Interactive Graph</div><div class="graph-view-placeholder">
 		<div class="graph-view-container">
